[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "qiskit-quimb"
description = "Simulate Qiskit circuits using quimb"
version = "0.0.8"
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["qiskit", "quimb >= 1.11"]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "myst-parser",
    "nbmake",
    "nbsphinx",
    "pytest",
    "qiskit[visualization]",
    "qiskit-sphinx-theme",
    "ruff",
    "sphinx",
    "sphinx-autodoc-typehints",
]
docs = ["kahypar"]

[project.urls]
Homepage = "https://github.com/qiskit-community/qiskit-quimb"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
files = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff]
include = [
    "pyproject.toml",
    "src/**/*.py",
    "src/**/*.pyi",
    "tests/**/*.py",
    "tests/**/*.pyi",
    "docs/**/*.py",
    "docs/**/*.pyi",
    "docs/**/*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "NPY"]
